--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,13 +15,10 @@ builds:
     - arm
     - arm64
   ignore:
-    - goos: freebsd
+    - goos: linux
       goarch: arm
       goarm: 6
-    - goos: openbsd
-      goarch: arm
-      goarm: 6
-    - goos: darwin 
+    - goos: darwin
       goarch: 386
 changelog:
   sort: asc
